--- a/pages/index.css
+++ b/pages/index.css
@@ -6,3 +6,138 @@
   font-size: 16px;
   line-height: 20px;
 }
+
+.header {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  min-height: 720px;
+  max-height: 800px;
+  padding: 30px 80px 40px 80px;
+  position: relative;
+  box-sizing: border-box;
+  background-color: #fff;
+
+  background-image: url("../images/background_header.svg");
+  /* background-position: center; */
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav__logo {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  width: 105px;
+  height: 35px;
+}
+
+.nav__links {
+  position: absolute;
+  top: 30px;
+  right: 80px;
+  display: flex;
+  height: 20px;
+  column-gap: 20px;
+  padding-left: 0;
+  margin: 0;
+  margin-right: 80px;
+  list-style-type: none;
+}
+
+.nav__link {
+  color: #000000;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 500px;
+}
+
+.header__content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header__title {
+  max-width: 709px;
+  font-size: 58px;
+  line-height: 72px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  border: 0;
+  margin: 0;
+  margin-top: 183px;
+}
+
+.header__title_span-accent {
+  width: 100%;
+  font-family: "Noto Serif", "Times New Roman", Serif;
+  font-style: italic;
+  font-size: 58px;
+  line-height: 72px;
+  color: #2f80ed;
+  margin: 0 300px 0 0;
+}
+
+.header__description {
+  max-width: 638px;
+  font-family: "Noto Serif", "Times New Roman", Serif;
+  font-size: 20px;
+  line-height: 30px;
+  margin: 0;
+  margin-top: 28px;
+  padding: 0;
+  border: 0;
+}
+
+.header__image {
+  max-width: 646px;
+  max-height: 568px;
+  margin-right: 5px;
+  margin-top: 48px;
+}
+
+.header__footer {
+  margin-top: auto;
+
+  display: flex;
+  justify-content: space-between;
+  box-sizing: border-box;
+}
+
+.header__time {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 16px;
+  color: #838383;
+  line-height: 16px;
+}
+
+.header__address {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  margin-right: 80px;
+  font-size: 16px;
+  line-height: 16px;
+  align-content: flex-end;
+  color: #838383;
+}
+
+.header__footer-paragraph {
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+
+.recipes {
+  height: 100vh;
+  min-height: 720px;
+  max-height: 800px;
+  background-color: #0a2850;
+}
