--- a/pages/index.css
+++ b/pages/index.css
@@ -54,7 +54,7 @@
   color: #000000;
   text-decoration: none;
   font-size: 16px;
-  font-weight: 500px;
+  font-weight: 500;
 }
 
 .header__content {
