--- a/pages/index.css
+++ b/pages/index.css
@@ -11,6 +11,8 @@ html {
   line-height: 20px;
 }
 
+/* ------------------------------------Header ------------------------- */
+
 .header {
   position: relative;
   display: flex;
@@ -119,6 +121,8 @@ html {
   margin: 0;
 }
 
+/* ------------------------------------Section de Receitas ------------------------- */
+
 .recipes {
   height: 100vh;
   min-height: 720px;
@@ -187,4 +191,109 @@ html {
   font-weight: 500;
   font-size: 20px;
   line-height: 30px;
+}
+
+/* ------------------------------------Section de Reservas ------------------------- */
+
+.reservation {
+  height: 100vh;
+  min-height: 720px;
+  max-height: 900px;
+  background-color: #d9e7ff;
+  background-image: url("../images/background_reservation.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.reservation__title {
+  margin: 0 auto;
+  padding-top: 100px;
+  display: flex;
+  justify-content: center;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+}
+
+.reservation__form {
+  max-width: 385px;
+  margin: 80px auto 120px;
+}
+
+.form__fieldset {
+  width: 385px;
+  margin: 0;
+  padding: 0;
+  padding-bottom: 50px;
+  border: 0;
+}
+
+.form__label {
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  display: block;
+}
+
+.form__input {
+  width: 100%;
+  height: 60px;
+  border: 1px solid #838383;
+  border-radius: 4px;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 20px;
+  margin-top: 8px;
+  margin-bottom: 32px;
+  padding: 0;
+}
+
+.form__input::placeholder {
+  color: #838383;
+  padding-left: 20px;
+  padding-top: 15px;
+}
+
+.form__button {
+  width: 100%;
+  height: 60px;
+  border: 0;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+  color: #ffffff;
+  background-color: #2f80ed;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 32px;
+}
+
+.form__checkbox {
+  border-radius: 2px;
+  width: 20px;
+  height: 20px;
+}
+
+.form__label-checkbox {
+  display: flex;
+  justify-content: center;
+}
+
+.form__label-text {
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  margin-left: 12px;
 }
