Nova atualização do projeto - Final sprint4

--- a/pages/index.css
+++ b/pages/index.css
@@ -1,297 +1,8 @@
-html {
-  /* com esse comando so clicar nos links internos a rolagem fica mais suave */
-  scroll-behavior: smooth;
-}
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-/* ------------------------------------Header ------------------------- */
-
-.header {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
-  min-height: 720px;
-  max-height: 800px;
-  padding: 30px 80px 40px;
-  height: 100vh;
-  background-image: url(../images/background_header.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav__logo {
-  position: absolute;
-  top: 30px;
-  left: 30px;
-  width: 105px;
-  height: 35px;
-}
-
-.nav__links {
-  position: absolute;
-  top: 30px;
-  right: 80px;
-  display: flex;
-  height: 20px;
-  column-gap: 20px;
-  padding-left: 0;
-  margin: 0;
-  list-style-type: none;
-}
-
-.nav__link {
-  color: #000000;
-  text-decoration: none;
-  font-size: 16px;
-  font-weight: 500;
-}
-
-.header__title {
-  color: black;
-  max-width: 709px;
-  margin: 0;
-  margin-top: 183px;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 58px;
-  line-height: 72px;
-  letter-spacing: -1px;
-}
-
-.header__span-accent {
-  display: block;
-  font-family: "Noto Serif", "Times New Roman", sans-serif;
-  font-style: italic;
-  font-weight: normal;
-  font-size: 58px;
-  line-height: 72px;
-  color: #2f80ed;
-}
-
-.header__description {
-  margin: 0;
-  margin-top: 28px;
-  max-width: 683px;
-  font-family: "Noto Serif", "Times New Roman", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.header__image {
-  position: absolute;
-  width: 646px;
-  height: 568px;
-  top: 124px;
-  right: 5px;
-}
-
-.header__footer {
-  display: flex;
-  align-items: flex-end;
-  margin-top: auto;
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-  box-sizing: border-box;
-  width: 100%;
-  justify-content: space-between;
-}
-
-.header__paragraph {
-  font-weight: 500;
-  font-style: normal;
-  color: #6f6f6f;
-  margin: 0;
-}
-
-/* ------------------------------------Section de Receitas ------------------------- */
-
-.recipes {
-  height: 100vh;
-  min-height: 720px;
-  max-height: 800px;
-  background-color: #0a2850;
-  background-image: url("../images/background_recipes.svg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.recipes__title {
-  max-width: 580px;
-  margin: 0;
-  margin-left: 80px;
-  padding-top: 100px;
-  color: #fff;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-.recipes__subtitle {
-  max-width: 438px;
-  margin: 0;
-  margin-left: 80px;
-  padding-top: 24px;
-  color: #fff;
-  font-family: "Noto Serif", "Times New Roman", Serif;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.recipes__videos {
-  padding-top: 80px;
-  display: flex;
-  gap: 40px;
-  justify-content: center;
-}
-
-.recipes__video-item {
-  border: 0;
-  margin: 0;
-  padding: 0;
-}
-
-.recipes__iframe {
-  width: 480px;
-  height: 273px;
-  border: 0;
-}
-
-.recipes__video-item-footer {
-  margin: 0;
-  border: 0;
-  padding-top: 24px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.recipes__video-item-footer-description {
-  border: 0;
-  margin: 0;
-  padding: 0;
-  color: #fff;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-/* ------------------------------------Section de Reservas ------------------------- */
-
-.reservation {
-  height: 100vh;
-  background-color: #d9e7ff;
-  background-image: url("../images/background_reservation.svg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.reservation__title {
-  margin: 0 auto 80px;
-  padding-top: 100px;
-  display: flex;
-  justify-content: center;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.reservation__form {
-  max-width: 385px;
-  margin: 0 auto 120px;
-}
-
-.form__fieldset {
-  width: 385px;
-  margin: 0;
-  padding: 0;
-  padding-bottom: 50px;
-  border: 0;
-}
-
-.form__label {
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  display: block;
-}
-
-.form__input {
-  width: 100%;
-  height: 60px;
-  border: 1px solid #838383;
-  border-radius: 4px;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 20px;
-  margin-top: 8px;
-  margin-bottom: 32px;
-  padding: 0;
-}
-
-.form__input::placeholder {
-  color: #838383;
-  padding-left: 20px;
-  padding-top: 15px;
-}
-
-.form__button {
-  width: 100%;
-  height: 60px;
-  border: 0;
-  margin: 0;
-  padding: 0;
-  cursor: pointer;
-  color: #ffffff;
-  background-color: #2f80ed;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  margin-bottom: 32px;
-}
-
-.form__checkbox {
-  border-radius: 2px;
-  width: 20px;
-  height: 20px;
-}
-
-.form__label-checkbox {
-  display: flex;
-  justify-content: center;
-}
-
-.form__label-text {
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  margin-left: 12px;
-}
+@import url("../vendor/normalize.css");
+@import url("../blocks/page.css");
+@import url("../blocks/header.css");
+@import url("../blocks/nav.css");
+@import url("../blocks/recipes.css");
+@import url("../blocks/reservation.css");
+@import url("../blocks/form.css");
+@import url("../blocks/footer.css");
