--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -8,7 +8,7 @@
 }
 
 .reservation__title {
-  margin: 0 auto;
+  margin: 0 auto 80px;
   padding-top: 100px;
   display: flex;
   justify-content: center;
